// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI kit List Item can pass names of class to apply style 1`] = `
<div
  aria-selected={false}
  className="item"
  role="listitem"
>
  <span
    className="foo"
  >
    foo
  </span>
</div>
`;

exports[`UI kit List Item can pass props directly 1`] = `
<div
  aria-selected={false}
  onClick={[Function]}
  role="listitem"
>
  <span
    className="foo"
  >
    foo
  </span>
</div>
`;

exports[`UI kit List Item render with empty nodes 1`] = `
<div
  aria-selected={false}
  role="listitem"
/>
`;

exports[`UI kit List Item render with single nodes 1`] = `
<div
  aria-selected={false}
  role="listitem"
>
  test
</div>
`;

exports[`UI kit List Item render with single nodes 2`] = `
<div
  aria-selected={false}
  role="listitem"
>
  <span
    className="foo"
  >
    foo
  </span>
  <a
    href=""
  >
    link
  </a>
</div>
`;
